# nvar

./: Cargo.toml  LICENSE-MIT  rustfmt.toml
examples/: face.rs
src/: error.rs  lib.rs
src/ar/: face_expressions.rs  mod.rs  sys.rs
src/cv/: mod.rs  sys.rs
