[package]
name = "nvar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.4"
libloading = "0.8"

[dev-dependencies]
raqote = { version = "0.8", default-features = false }
show-image = { version = "=0.14.0", features = [ "image", "raqote" ] }
nokhwa = { version = "0.10", features = [ "input-native" ] }
fxhash = "0.2"
tokio = { version = "1", features = [ "time", "rt-multi-thread" ] }
anyhow = "1.0"
